--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "tsc&& node ./dist/index.js",
-    "tsc":"tsc",
+    "tsc": "tsc",
     "test": "jest",
     "test:cov": "jest --coverage",
     "lint": "eslint ./**/**.ts",
@@ -30,5 +30,7 @@
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "clipboardy": "^2.3.0"
+  }
 }
